# astral-shelve

./: pyproject.toml
astral_shelve/: db.sqlite3  manage.py
astral_shelve/astral_shelve/: asgi.py  settings.py  urls.py  wsgi.py
astral_shelve/hymn_catalog/: apps.py  forms.py  models.py  views.py
astral_shelve/hymn_catalog/migrations/: 0001_initial.py
astral_shelve/hymn_catalog/templates/hymn_catalog/: person_confirm_delete.html  person_form.html  person_list.html
astral_shelve/pdf_generator/: pdf_generator.py  repetition_bar_allocator.py
astral_shelve/templates/: base.html
tests/: test_level_allocator.py
