[tool.poetry]
name = "astral_shelve"
version = "0.1.0"
description = ""
authors = ["Nitai Bezerra da Silva <nitaibezerra@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
Django = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
